--- a/6th/homework/style.css
+++ b/6th/homework/style.css
@@ -4,6 +4,17 @@ a {
 }
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+/*
+ * 참고: http://stackoverflow.com/questions/3397113/how-to-remove-border-outline-around-text-input-boxes-chrome
+ */
+input:focus {
+  outline: none;
 }
 
 .blind {
@@ -48,7 +59,8 @@ ul {
   right: 0;
 }
 .header .personal-menu:after,
-.header .homesetting-menu:after {
+.header .homesetting-menu:after,
+.main-menu button:after {
   display: block;
   content: '';
   background: url(images/sp_main.png) no-repeat;
@@ -66,17 +78,19 @@ ul {
 }
 
 .header .search-box {
-  height: 40px;
   margin: 0 15px 10px;
+  height: 40px;
+  padding: 9px 55px 0 10px;
+  box-sizing: border-box;
   background: #fff;
 }
 
-.header .search-area input {
-  display: block;
-  padding: 10px;
+.header .search-box input {
+  display: inline-block;
   width: 100%;
-  height: 40px;
+  height: 27px;
   box-sizing: border-box;
+  border: none;
 }
 
 .header .search-detail-area {
@@ -97,37 +111,95 @@ ul {
   display: none;
 }
 
-.main-nav {
+.main-menu {
+  position: relative;
   height: 43px;
+  box-sizing: border-box;
+  background: #fff;
+  border-bottom: 1px solid #e5e5e5;
+}
+.main-menu .category-list {
+  padding-left: 18px;
+  padding-right: 60px;
+  white-space: nowrap;
+}
+.main-menu .category-list li {
+  display: inline-block;
+  transform: translateX(-30px);
+}
+.main-menu .category-list li a {
+  display: inline-block;
+  height: 43px;
+  padding: 15px 5px;
+  box-sizing: border-box;
+}
+.main-menu .category-list li.selected a {
+  border-bottom: 2px solid #16b634;
+  color: #16b634;
+}
+.main-menu .gradient {
+  position: absolute;
+  top: 0;
+  width: 18px;
+  height: 100%;
+  background: rgba(255,255,255,1);
+}
+.main-menu .gradient.gradient-left {
+  left: 0;
+  background: -moz-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(255,255,255,0.11) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,0.11)));
+  background: -webkit-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(255,255,255,0.11) 100%);
+  background: -o-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(255,255,255,0.11) 100%);
+  background: -ms-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(255,255,255,0.11) 100%);
+  background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(255,255,255,0.11) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
+    /* Gradient Generator 사용: http://www.cssmatic.com/gradient-generator#'\-moz\-linear\-gradient\%28left\%2C\%20rgba\%28255\%2C255\%2C255\%2C1\%29\%200\%25\%2C\%20rgba\%28255\%2C255\%2C255\%2C0\.11\%29\%20100\%25\%29\%3B' */
+}
+.main-menu .gradient.gradient-right {
+  right: 43px;
+  background: -moz-linear-gradient(left, rgba(255,255,255,0.11) 0%, rgba(255,255,255,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,0.11)), color-stop(100%, rgba(255,255,255,1)));
+background: -webkit-linear-gradient(left, rgba(255,255,255,0.11) 0%, rgba(255,255,255,1) 100%);
+background: -o-linear-gradient(left, rgba(255,255,255,0.11) 0%, rgba(255,255,255,1) 100%);
+background: -ms-linear-gradient(left, rgba(255,255,255,0.11) 0%, rgba(255,255,255,1) 100%);
+background: linear-gradient(to right, rgba(255,255,255,0.11) 0%, rgba(255,255,255,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
+}
+.main-menu button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 43px;
+  height: 100%;
+  border: none;
+  border-left: 1px solid #e5e5e5;
+  background: #fff;
+}
+.main-menu button:after {
+  width: 16px;
+  height: 10px;
+  margin: 0 auto;
+  background-position: -134px -180px;
+}
+.main-menu button:focus {
+  outline: none;
+}
+
+.main {
+  padding: 10px 0;
+  background: #f3f3f3;
+}
+.main .card {
+  margin-bottom: 10px;
   background-color: #fff;
 }
-
-.main-nav h2 {
-  position: absolute;
-  left: -100%;
+.main .card h3 {
+  padding: 15px;
+  font-size: 16px;
+  font-weight: 600;
 }
-
-.main-nav ul li {
-  float: left;
-}
-
-.main-nav ul li:after {
-  display: block;
-  content: '';
-  clear: both;
-}
-
-
-.main h2, h3 {
-  position: absolute;
-  left: -100%;
-}
-
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
   height: 112px;
   background: #353840;
 }
