--- a/8th/style.css
+++ b/8th/style.css
@@ -7,7 +7,10 @@
 
 body {
   margin: 0;
-  padding: 0;
+  /*
+   * 불필요한 코드 제거
+   * padding: 0;
+   */
   background: rgb(242, 244, 245);
   font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
   color: #a1a1a1;
@@ -57,155 +60,54 @@ fieldset legend {
   left: -9999px;
 }
 
-/* Header */
-.header .logo {
-  display: block;
-  margin-top: 55px;
-  margin-bottom: 25px;
-  text-align: center;
-  color: var(--signature-color); /* rgb(--signature-color) */
-  font-family: 'Archivo Black', sans-serif;
-  font-weight: 400;
-  font-size: 40px;
-}
-
-/* Main */
-.main .form {
-  margin: 0 15px;
-}
-.main .form .container {
-  margin-bottom: 15px;
-  border: 1px solid #c1c1c1;
-  background: white;
-}
-.main .form .container .row {
-  height: 55px;
-  padding: 11.5px 17px;
-  border-bottom: 1px solid var(--divider-color); /*#eee;*/
-  box-sizing: border-box;
-}
-.main .form .container .row .btn-group {
+/* Button Group */
+.btn-group {
   display: flex;
   width: 100%;
-  height: 100%;
   text-align: center;
 }
-.main .form .container .row .btn-group .btn-item {
+.btn-group .btn-item {
   width: 50%;
   height: inherit;
 }
-.main .form .container .row .btn-group .btn-item:first-child {
+.btn-group .btn-item:first-child {
   display: flex;
 }
-.main .form .container .row .btn-group .btn-item:first-child::after {
+.btn-group .btn-item:first-child::after {
   content: '';
   width: 1px;
   background: var(--btn-default-border-color);/*#e1e1e1;*/
 }
-.main .form .container .row .btn-group .btn-item > label {
-  padding: 10.5px;
-  width: 100%;
+.btn-group .btn-item > label {
   display: inline-block;
-  height: 100%;
+  width: 100%;
+  height: 38px;
+  line-height: 38px;
   box-sizing: border-box;
 }
-.main .form .container .row {
-  display: flex;
-  align-items: center;
-}
-.main .form .container .row .input-area {
-  flex: 1;
-}
-.main .form .container .row button {
-  margin-left: 10px;
-}
-
-.main .form .container .row .icon-area {
-  width: 80px;
-  margin-left: 10px;
-  text-align: right;
-}
-
-.main .form .container .row {
-  padding: 8px 17px;
-}
-.main .form .container .row .btn-group .btn-item input[type="radio"] + label {
+.btn-group .btn-item input[type="radio"] + label {
   border: 1px solid var(--btn-default-border-color); /*#e1e1e1;*/
 }
-.main .form .container .row .btn-group .btn-item:first-child input[type="radio"] + label {
+.btn-group .btn-item:first-child input[type="radio"] + label {
   border-right-color: transparent;
 }
-.main .form .container .row .btn-group .btn-item:nth-child(2) input[type="radio"] + label {
+.btn-group .btn-item:nth-child(2) input[type="radio"] + label {
   border-left-color: transparent;
 }
-.main .form .container .row .btn-group .btn-item input[type="radio"]:checked + label {
-  border: 1px solid var(--signature-color); /* rgb(--signature-color) */
-  color: var(--signature-color); /* rgb(--signature-color) */
+.btn-group .btn-item input[type="radio"]:checked + label {
+  border: 1px solid var(--signature-color); /* rgb(35, 172, 0) */
+  color: var(--signature-color); /* rgb(35, 172, 0) */
 }
 
-.main .form .container .row.birth-area {
-  display: flex;
-  padding: 0;
-}
-.main .form .container .row.birth-area .input-area {
-  display: flex;
-  align-items: center;
-  flex: 1;
-}
-.main .form .container .row.birth-area .input-area > div {
-  width: 33.333333%;
-  margin: 0 10px;
-  box-sizing: border-box;
-}
-.main .form .container .row.birth-area .input-area > div:nth-child::after {
-  display: block;
-  content: '';
-  border-right: 1px solid red;
-}
-.main .form .container .row.birth-area .input-area > div {
-  display: flex;
-}
-.main .form .container .row.birth-area .input-area > div:first-child::after,
-.main .form .container .row.birth-area .input-area > div:nth-child(2)::after {
-  position: relative;
-  left: 10px;
-  width: 1px;
-  content: '';
-  background: var(--divider-color); /*#eee;*/
-}
-.main .form .container .row.birth-area .title-area {
-  width: 64px;
-  border-right: 1px solid var(--divider-color); /*#eee;*/
-  background: rgb(245, 245, 245);
-  text-align: center;
-  padding: 19px 0;
-  box-sizing: border-box;
-}
-.main .form .container .row.tel-area .input-area:first-child {
-  display: flex;
-  flex: initial;
-  margin-right: 10px;
-  width: 80px;
-}
-.main .form .container .row.tel-area .input-area:first-child::after {
-  position: relative;
-  left: 10px;
-  width: 1px;
-  content: '';
-  background: var(--divider-color); /*#eee;*/
-}
-.main .form .container .row.tel-area .input-area:nth-child(2) {
-  margin-left: 10px;
-}
 /* Button */
-.main .form .btn {
+.btn {
   margin: 0;
   padding: 0;
   border: 0;
   background: #fff;
 }
 /* Button - default */
-.main .form .btn.btn-default {
+.btn.btn-default {
   display: inline-block;
   width: 58px;
   height: 38px;
@@ -213,7 +115,7 @@ fieldset legend {
   background: #fff;
 }
 /* Button - submit */
-.main .form .btn.btn-submit {
+.btn.btn-submit {
   display: block;
   width: 100%;
   height: 55px;
@@ -224,9 +126,113 @@ fieldset legend {
   font-weight: 300;
   background: var(--signature-color); /*rgb(35, 172, 0);*/
 }
-.main .form .btn.btn-submit .submit-text {
+.btn.btn-submit .submit-text {
   position: relative;
   top: -4px;
+}
+
+/* Container */
+.container {
+  margin-bottom: 15px;
+  border: 1px solid #c1c1c1;
+  background: #fff;
+}
+
+/* Row */
+.row {
+  height: 55px;
+  padding: 11.5px 17px;
+  border-bottom: 1px solid var(--divider-color); /*#eee;*/
+  box-sizing: border-box;
+}
+.row {
+  display: flex;
+  align-items: center;
+}
+.row .input-area {
+  flex: 1;
+}
+.row button {
+  margin-left: 10px;
+}
+
+.row .icon-area {
+  width: 80px;
+  margin-left: 10px;
+  text-align: right;
+}
+
+.row.birth-area {
+  display: flex;
+  padding: 0;
+}
+.row.birth-area .input-area {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+.row.birth-area .input-area > div {
+  width: 33.333333%;
+  margin: 0 10px;
+  box-sizing: border-box;
+}
+.row.birth-area .input-area > div:nth-child::after {
+  display: block;
+  content: '';
+  border-right: 1px solid red;
+}
+.row.birth-area .input-area > div {
+  display: flex;
+}
+.row.birth-area .input-area > div:first-child::after,
+.row.birth-area .input-area > div:nth-child(2)::after {
+  position: relative;
+  left: 10px;
+  width: 1px;
+  content: '';
+  background: var(--divider-color); /*#eee;*/
+}
+.row.birth-area .title-area {
+  width: 64px;
+  border-right: 1px solid var(--divider-color); /*#eee;*/
+  background: rgb(245, 245, 245);
+  text-align: center;
+  padding: 19px 0;
+  box-sizing: border-box;
+}
+.row.tel-area .input-area:first-child {
+  display: flex;
+  flex: initial;
+  margin-right: 10px;
+  width: 80px;
+}
+.row.tel-area .input-area:first-child::after {
+  position: relative;
+  left: 10px;
+  width: 1px;
+  content: '';
+  background: var(--divider-color); /*#eee;*/
+}
+.row.tel-area .input-area:nth-child(2) {
+  margin-left: 10px;
+}
+
+
+/* Header */
+.header .logo {
+  display: block;
+  margin-top: 55px;
+  margin-bottom: 25px;
+  text-align: center;
+  color: var(--signature-color); /* rgb(35, 172, 0) */
+  font-family: 'Archivo Black', sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+}
+
+/* Main */
+.main .form {
+  margin: 0 15px;
 }
 
 /* Footer */
